[package]
name = "rshim"
version = "0.1.0"
authors = ["anonymous <anonymous@example.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
panic = "abort"
debug = false
lto = true
strip = true
codegen-units = 1
incremental = false 

[dependencies]
unicode-bom = "1"
rustc-hash = "1.1.0"

[dependencies.winapi]
version = "0.3"
features = [
    "wincon",
    "consoleapi",
    "minwindef",
    "shellapi",
    "winuser",
    "synchapi",
    "combaseapi",
    "winbase",
    "processthreadsapi",
    "objbase",
    "impl-default",
    "errhandlingapi",
    "winerror",
    "jobapi2"
]
